Refactor outputProcessors to aggregate before write (#28)